# mygit

imx6_face_recog/: CMakeLists.txt  CMakeLists.txt.bak  arm-toolchain.cmake  clock_page.c  face_recog_page.c  fr_extra_page.c  gui_utile.c  gui_utile.h  main.c  sdl_door.c  sdl_door.h  sdl_page.c  sdl_page.h  sound_utile.c  sound_utile.h
imx6_face_recog/SI_Project/: imx6_sdl_project.IAB  imx6_sdl_project.IAD  imx6_sdl_project.IMB  imx6_sdl_project.IMD  imx6_sdl_project.PFI  imx6_sdl_project.PO  imx6_sdl_project.PR  imx6_sdl_project.PRI  imx6_sdl_project.PS  imx6_sdl_project.SearchResults  imx6_sdl_project.WK3
imx6_face_recog/backup/: fr_backup.c  fr_backup.h  ftplib.c
imx6_face_recog/door_kernel/: blockqueue.c  blockqueue.h  comm_utile.c  comm_utile.h  config_pin.h  door_card.c  door_card.h  door_common.h  door_elevator.c  door_elevator.h  door_info.c  door_info.h  door_log.c  door_log.h  door_media.c  door_media.h  door_network.c  door_network.h  door_signal.c  door_signal.h  dtmf.h  g711.c  gst_video.c  gst_video.h  i2c_ctl.c  libAudio.c  libAudio.h  platform_ioctl.c  platform_ioctl.h  send_videofile.c  taskpool.c  taskpool.h  tx522.c  tx522.h
imx6_face_recog/libs/: perm.lic
imx6_face_recog/recog/: FRLibrary.h  FRLibraryTypes.h  face_recog.c  face_recog.h  fr_lib_wrap.cpp  fr_lib_wrap.h
imx6_face_recog/videos/: gst_fr_streamer.c  gst_send_streamer.c  gst_video.c  gst_video.h
